src/Skia/Bindings/Sk_imagefilter.hs


@
sk_imagefilter_t *sk_imagefilter_new_spot_lit_diffuse(const sk_point3_t *location, const sk_point3_t *target, float specularExponent, float cutoffAngle, sk_color_t lightColor, float surfaceScale, float kd, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_spot_lit_diffuse" sk_imagefilter_new_spot_lit_diffuse ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * location"@
  -> Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * target"@
  -> CFloat -- ^ C argument @"float specularExponent"@
  -> CFloat -- ^ C argument @"float cutoffAngle"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float kd"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_spot_lit_diffuse'
foreign import ccall "&sk_imagefilter_new_spot_lit_diffuse" p'sk_imagefilter_new_spot_lit_diffuse ::
  FunPtr (Ptr (Sk_point3) -> Ptr (Sk_point3) -> CFloat -> CFloat -> Sk_color -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_distant_lit_specular(const sk_point3_t *direction, sk_color_t lightColor, float surfaceScale, float ks, float shininess, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_distant_lit_specular" sk_imagefilter_new_distant_lit_specular ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * direction"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float ks"@
  -> CFloat -- ^ C argument @"float shininess"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_distant_lit_specular'
foreign import ccall "&sk_imagefilter_new_distant_lit_specular" p'sk_imagefilter_new_distant_lit_specular ::
  FunPtr (Ptr (Sk_point3) -> Sk_color -> CFloat -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_point_lit_specular(const sk_point3_t *location, sk_color_t lightColor, float surfaceScale, float ks, float shininess, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_point_lit_specular" sk_imagefilter_new_point_lit_specular ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * location"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float ks"@
  -> CFloat -- ^ C argument @"float shininess"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_point_lit_specular'
foreign import ccall "&sk_imagefilter_new_point_lit_specular" p'sk_imagefilter_new_point_lit_specular ::
  FunPtr (Ptr (Sk_point3) -> Sk_color -> CFloat -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))

{- | C function signature:

@
sk_imagefilter_t *sk_imagefilter_new_spot_lit_specular(const sk_point3_t *location, const sk_point3_t *target, float specularExponent, float cutoffAngle, sk_color_t lightColor, float surfaceScale, float ks, float shininess, const sk_imagefilter_t *input, const sk_rect_t *cropRect)
@
-}
foreign import ccall "sk_imagefilter_new_spot_lit_specular" sk_imagefilter_new_spot_lit_specular ::
  Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * location"@
  -> Ptr (Sk_point3) -- ^ C argument @"const sk_point3_t * target"@
  -> CFloat -- ^ C argument @"float specularExponent"@
  -> CFloat -- ^ C argument @"float cutoffAngle"@
  -> Sk_color -- ^ C argument @"sk_color_t lightColor"@
  -> CFloat -- ^ C argument @"float surfaceScale"@
  -> CFloat -- ^ C argument @"float ks"@
  -> CFloat -- ^ C argument @"float shininess"@
  -> Ptr (Sk_imagefilter) -- ^ C argument @"const sk_imagefilter_t * input"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cropRect"@
  -> IO (Ptr (Sk_imagefilter)) -- ^ C return type: @"sk_imagefilter_t *"@

-- | Function pointer to 'sk_imagefilter_new_spot_lit_specular'
foreign import ccall "&sk_imagefilter_new_spot_lit_specular" p'sk_imagefilter_new_spot_lit_specular ::
  FunPtr (Ptr (Sk_point3) -> Ptr (Sk_point3) -> CFloat -> CFloat -> Sk_color -> CFloat -> CFloat -> CFloat -> Ptr (Sk_imagefilter) -> Ptr (Sk_rect) -> IO (Ptr (Sk_imagefilter)))
